Complete example with 0.9.23

--- a/www/mustache/index.mustache
+++ b/www/mustache/index.mustache
@@ -5,6 +5,13 @@
     <title>{{title}}</title>
 </head>
 <body>
-    {{> partial}}
+    <header>
+        <h1>{{title}}</h1>
+        More info & code
+        <a href="https://github.com/soyjavi/zen-server" target="_blank">GitHUB</a>
+    </header>
+
+    {{> partial.example}}
+    {{> partial.session}}
 </body>
 </html>
