Implemented new request attribute "mobile"

--- a/www/mustache/partial.example.mustache
+++ b/www/mustache/partial.example.mustache
@@ -1,4 +1,5 @@
 <section>
     <h2>partial.example</h2>
     subdomain: <strong>{{example.subdomain}}</strong>
+    mobile: <strong>{{mobile}}</strong>
 </section>
