Changes for monitor

--- a/www/mustache/partial.example.mustache
+++ b/www/mustache/partial.example.mustache
@@ -2,4 +2,5 @@
     <h2>partial.example</h2>
     subdomain: <strong>{{example.subdomain}}</strong>
     mobile: <strong>{{mobile}}</strong>
+    ip: <strong>{{ip}}</strong>
 </section>
